--- a/config.yaml
+++ b/config.yaml
@@ -58,19 +58,23 @@ contact: 'research.computing@wehi.edu.au' # FIXME
 # - another-learner.md
 
 # Order of episodes in your lesson
-episodes: 
+episodes:
 - 01-introduction.Rmd
 - 02-cpumonitoring.Rmd
+- 03-moremonitoring.Rmd
 - 04-jobarrays.Rmd
+- 05-jobdependencies.Rmd
+- 06-rpython.Rmd
+- 07-usefulopts.Rmd
 
 # Information for Learners
-learners: 
+learners:
 
 # Information for Instructors
-instructors: 
+instructors:
 
 # Learner Profiles
-profiles: 
+profiles:
 
 # Customisation ---------------------------------------------
 #
