--- a/config.yaml
+++ b/config.yaml
@@ -2,13 +2,12 @@
 # Values for this lesson.
 #------------------------------------------------------------
 
-# Which carpentry is this (swc, dc, lc, or cp)?
-# swc: Software Carpentry
-# dc: Data Carpentry
-# lc: Library Carpentry
-# cp: Carpentries (to use for instructor training for instance)
-# incubator: The Carpentries Incubator
-carpentry: 'incubator'
+# Which carpentry is this (swc, dc, lc, or cp)? < REPLACED with UNIMELB institutes >
+# uom: University of Melbourne
+# mb: Melbourne Bioinformatics
+# mig: Melbourne Integrative Genomics
+# wehi: Walter and Eliza Hall Institute
+carpentry: 'wehi'
 
 # Overall title for pages.
 title: 'Intermediate Slurm' # FIXME
@@ -79,4 +78,5 @@ profiles:
 # This space below is where custom yaml items (e.g. pinning
 # sandpaper and varnish versions) should live
 
-
+# This is the MB varnish, which is a custom version of the Carpentries varnish
+varnish: 'melbournebioinformatics/uom-varnish@main'
